# deepnetz

./: .gitignore  Dockerfile.registry  MANIFEST.in  README.md  SECURITY.md  build_release.sh  check_backends.py  docker-compose.registry.yml  pyproject.toml  setup.py  test_all_models.py  test_load_all.py  test_load_direct.py
.github/workflows/: workflow.yml
deepnetz/: __init__.py  cli.c  cli.py  errors.py  server.c  server.py
deepnetz/backends/: __init__.py  base.py  discovery.py  huggingface.py  lmstudio.py  native.py  ollama.py  remote.py  vllm.py
deepnetz/cache/: __init__.py  eviction.py  merging.py  turboquant.py
deepnetz/engine/: backend.c  backend.py  cards.py  converter.py  downloader.c  downloader.py  evaluator.py  features.py  gguf_reader.c  gguf_reader.py  hardware.c  hardware.py  manager.py  model.c  model.py  monitor.py  optimize.py  planner.c  planner.py  resolver.py  scanner.py  session.py  speculative.py
deepnetz/offload/: __init__.py
deepnetz/registry/: __init__.py  client.py  config.py  server.py  store.py
deepnetz/tools/: __init__.py  base.py  registry.py  search.py
deepnetz/ui/: __init__.py  routes.py
deepnetz/ui/static/: app.js  chat.js  style.css
deepnetz/ui/templates/: chat.html  dashboard.html  index.html  landing.html  models.html
tests/: test_core.py
