[build-system]
requires = ["setuptools>=64", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "deepnetz"
version = "0.2.0"
description = "Run massive models on minimal hardware"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Keyvan Hardani", email = "hardani@hotmail.de"}]
urls = {Homepage = "https://deepnetz.com", Repository = "https://github.com/Keyvanhardani/deepnetz"}

[project.scripts]
deepnetz = "deepnetz.cli:main"
