[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepnetz"
version = "1.3.1"
description = "Run massive models on minimal hardware"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Keyvan Hardani", email = "hardani@hotmail.de"}]

[project.urls]
Homepage = "https://deepnetz.com"
Repository = "https://github.com/Keyvanhardani/deepnetz"

[project.scripts]
deepnetz = "deepnetz.cli:main"
